# sb3-hppo

./: .gitignore  README.md  benchmark.py  hy_base_class.py  hy_on_policy_algo.py  hy_ppo.py  pyproject.toml  requirements.txt  test.py  train.py  wrapper.py
hppo/: hy_base_class.py  hy_buffer.py  hy_on_policy_algo.py  hy_policies.py  hy_ppo.py  hyper_layer.py
output/sb3hppo_HardMove-v0_20250515_132211/: args.json
output/sb3hppo_HardMove-v0_20250515_132211/tb_log/PPO_1/: events.out.tfevents.1747286531.erazer-d80.1160483.0
output/sb3hppo_HardMove-v0_20250515_152922/: args.json
output/sb3hppo_HardMove-v0_20250515_152922/tb_log/PPO_1/: events.out.tfevents.1747294162.erazer-d80.1166541.0
output/sb3hppo_HardMove-v0_20250515_212521/: args.json
output/sb3hppo_HardMove-v0_20250515_212521/tb_log/PPO_1/: events.out.tfevents.1747315521.erazer-d80.1110370.0
output/sb3hppo_Moving-v0_20250515_120142/: args.json
output/sb3hppo_Moving-v0_20250515_120142/tb_log/PPO_1/: events.out.tfevents.1747281703.erazer-d80.1158975.0
output/sb3hppo_Moving-v0_20250515_140609/: args.json
output/sb3hppo_Moving-v0_20250515_140609/tb_log/PPO_1/: events.out.tfevents.1747289170.erazer-d80.1161931.0
output/sb3hppo_Moving-v0_20250515_200248/: args.json
output/sb3hppo_Moving-v0_20250515_200248/tb_log/PPO_1/: events.out.tfevents.1747310569.erazer-d80.1102833.0
output/sb3hppo_Sliding-v0_20250515_124244/: args.json
output/sb3hppo_Sliding-v0_20250515_144746/: args.json
output/sb3hppo_Sliding-v0_20250515_204533/: args.json
(+3 files in other folders)
